# rdk-sys_mon_tools-sys_utils

./: CONTRIBUTING.md  Makefile  Makefile.am  configure.ac  rdk_build.sh  rdk_env.xml
device_settings_utils/: Makefile  Makefile.am  getDeviceSettings.cpp
trm_diag_utils/: Makefile  Makefile.am  trmDiagInfo.cpp  trmDiagInfo.h
